// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IpcBattery components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 76,
        "transform": Array [
          Object {
            "rotateZ": "0deg",
          },
        ],
        "width": 76,
      },
      Object {},
    ]
  }
>
  <Svg
    height={76}
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 11 19"
    width={44}
  >
    <Path
      d="M6.5,0 C6.77614237,-5.07265313e-17 7,0.223857625 7,0.5 L7,1 L9.5,1 C10.3284271,1 11,1.67157288 11,2.5 L11,17.5 C11,18.3284271 10.3284271,19 9.5,19 L1.5,19 C0.671572875,19 0,18.3284271 0,17.5 L0,2.5 C0,1.67157288 0.671572875,1 1.5,1 L4,1 L4,0.5 C4,0.223857625 4.22385763,5.07265313e-17 4.5,0 L6.5,0 Z M9.5,2 L1.5,2 C1.22385763,2 1,2.22385763 1,2.5 L1,17.5 C1,17.7761424 1.22385763,18 1.5,18 L9.5,18 C9.77614237,18 10,17.7761424 10,17.5 L10,2.5 C10,2.22385763 9.77614237,2 9.5,2 Z"
      fill="rgba(0,0,0,.5)"
    />
    <Polygon
      fill="#d11d14"
      points="2 17 9 17 9 17 2 17"
    />
  </Svg>
</View>
`;

exports[`IpcBattery components render middle ele value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 76,
        "transform": Array [
          Object {
            "rotateZ": "0deg",
          },
        ],
        "width": 76,
      },
      Object {},
    ]
  }
>
  <Svg
    height={76}
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 11 19"
    width={44}
  >
    <Path
      d="M6.5,0 C6.77614237,-5.07265313e-17 7,0.223857625 7,0.5 L7,1 L9.5,1 C10.3284271,1 11,1.67157288 11,2.5 L11,17.5 C11,18.3284271 10.3284271,19 9.5,19 L1.5,19 C0.671572875,19 0,18.3284271 0,17.5 L0,2.5 C0,1.67157288 0.671572875,1 1.5,1 L4,1 L4,0.5 C4,0.223857625 4.22385763,5.07265313e-17 4.5,0 L6.5,0 Z M9.5,2 L1.5,2 C1.22385763,2 1,2.22385763 1,2.5 L1,17.5 C1,17.7761424 1.22385763,18 1.5,18 L9.5,18 C9.77614237,18 10,17.7761424 10,17.5 L10,2.5 C10,2.22385763 9.77614237,2 9.5,2 Z"
      fill="rgba(0,0,0,.5)"
    />
    <Polygon
      fill="#e38315"
      points="2 14.34 9 14.34 9 17 2 17"
    />
    <Path
      d="M3.2 0L0 5h1.6L.8 9 4 4H2.4z"
      fill="rgba(0,0,0,.5)"
      fillRule="evenodd"
      x={3.5}
      y={5}
    />
  </Svg>
</View>
`;

exports[`IpcBattery components render not dpMode 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 76,
        "transform": Array [
          Object {
            "rotateZ": "0deg",
          },
        ],
        "width": 76,
      },
      Object {},
    ]
  }
>
  <Svg
    height={76}
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 11 19"
    width={44}
  >
    <Path
      d="M6.5,0 C6.77614237,-5.07265313e-17 7,0.223857625 7,0.5 L7,1 L9.5,1 C10.3284271,1 11,1.67157288 11,2.5 L11,17.5 C11,18.3284271 10.3284271,19 9.5,19 L1.5,19 C0.671572875,19 0,18.3284271 0,17.5 L0,2.5 C0,1.67157288 0.671572875,1 1.5,1 L4,1 L4,0.5 C4,0.223857625 4.22385763,5.07265313e-17 4.5,0 L6.5,0 Z M9.5,2 L1.5,2 C1.22385763,2 1,2.22385763 1,2.5 L1,17.5 C1,17.7761424 1.22385763,18 1.5,18 L9.5,18 C9.77614237,18 10,17.7761424 10,17.5 L10,2.5 C10,2.22385763 9.77614237,2 9.5,2 Z"
      fill="rgba(0,0,0,.5)"
    />
    <Polygon
      fill="#61d914"
      points="2 5.800000000000001 9 5.800000000000001 9 17 2 17"
    />
    <Path
      d="M3.2 0L0 5h1.6L.8 9 4 4H2.4z"
      fill="rgba(0,0,0,.5)"
      fillRule="evenodd"
      x={3.5}
      y={5}
    />
  </Svg>
</View>
`;
